bottom navigation visible only on mobile devices fixed

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 
-
 nav > .nav-button{
     background-color: white;
     font-size: 15px;
@@ -68,18 +67,13 @@ nav > .nav-button:active{
     margin-right: -50%;
     transform: translate(-50%, -50%);
 }
-
-.nav-item {
-    text-align: center;
-    display: table;
+@media (min-width: 480px) {
+    .nav-bottom {
+        display: none;
+    }
 }
 
-.nav-item> a {
-    color: whitesmoke;
-    text-decoration: none;
-}
-
-@media (max-device-width:480px)  {
+@media (max-width: 480px)  {
     .nav-bottom {
         display: flex;
         grid-gap: 20px;
@@ -88,10 +82,19 @@ nav > .nav-button:active{
         bottom: 0;
         left: 0;
         width: 100%;
-        padding: 10px 0px;
+        padding: 10px 0;
         background: blue;
         color:whitesmoke;
         font-family: sans-serif;
-
     }
+    .nav-item {
+        text-align: center;
+        display: table;
+    }
+
+    .nav-item> a {
+        color: whitesmoke;
+        text-decoration: none;
+    }
+
 }
